k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudsecops
  labels:
    name: cloudsecops
    app: cloudsecops
